--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -18,7 +18,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required autocomplete="current-password">
             <br>
-            <div class="g-recaptcha" data-sitekey="6Lf7me4qAAAAABYxkv1dYO6LhEITN5L8VGkvIzjN"></div>
+            <div class="g-recaptcha" data-sitekey="6Lf7me4qAAAAABYxkv1dYO6LhEITN5L8VGkvIzjN" data-theme="dark"></div>
             <br>
             <button type="submit">Login</button>
             <p class="signup-message">Don't have an account? <a href="/signup">Sign Up</a></p>
