--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,7 +20,7 @@
             <label for="password">Repeat password:</label>
             <input type="password" id="password" name="rpassword" required>
             <br>
-            <div class="g-recaptcha" data-sitekey="6Lf7me4qAAAAABYxkv1dYO6LhEITN5L8VGkvIzjN"></div>
+            <div class="g-recaptcha" data-sitekey="6Lf7me4qAAAAABYxkv1dYO6LhEITN5L8VGkvIzjN" data-theme="dark"></div>
             <br>
             <button type="submit">Sign up</button>
             <p class="signup-message">Already have an account? <a href="/">Log in</a></p>
